Fix flight search and select field sizes on mobile

--- a/app/assets/stylesheets/_form.scss
+++ b/app/assets/stylesheets/_form.scss
@@ -19,6 +19,10 @@ input, textarea, select, .uneditable-input {
 	@include box_sizing;
 }
 
+input[type="date"] {
+	height: 2.375rem;
+}
+
 textarea.form-control {
   height: 8em;
 }
